--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,7 +1,18 @@
 {
   "titleApp": "Story App",
   "splashDescription": "Welcome to Story App",
-  "loginTittle": "Sign in",
-  "description": "Hi! welcome back, your've been missed",
-  "titleButton" : "Sign in"
+
+  "loginTitle": "Sign in",
+  "registerTitle": "Register",
+  "descriptionLogin": "Hi! welcome back, your've been missed",
+  "descriptionRegister": "Fill Your Information below",
+  "name": "Nama",
+  "confirmPassword": "Confirm password",
+  "validationName": "Name must be filled in",
+  "validationEmail": "Email must be filled in",
+  "validationPassword": "Password must be filled in",
+  "validationPassword2": "The password must have 8 characters",
+  "questionRegister": "Don't have an account ?",
+  "questionLogin": "Alredy have account ?"
+
 }
