--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -6,13 +6,19 @@
   "registerTitle": "Register",
   "descriptionLogin": "Hi! welcome back, your've been missed",
   "descriptionRegister": "Fill Your Information below",
-  "name": "Nama",
+  "name": "Name",
   "confirmPassword": "Confirm password",
   "validationName": "Name must be filled in",
   "validationEmail": "Email must be filled in",
   "validationPassword": "Password must be filled in",
   "validationPassword2": "The password must have 8 characters",
   "questionRegister": "Don't have an account ?",
-  "questionLogin": "Alredy have account ?"
+  "questionLogin": "Alredy have account ?",
+
+  "addStory" : "Add Stroy",
+  "description" : "description",
+  "addImage" : "Add Image",
+
+  "storyDetail" : "Story Details"
 
 }
